2007-08-23  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/x86_64/dl-trampoline.S (_dl_runtime_profile): Correctly
	align stack for call if pltexit is to be used.

	[BZ #3924]
	* sysdeps/i386/dl-trampoline.S (_dl_runtime_profile): Correctly
	align for function call in case pltexit has to be called later.

	* sysdeps/i386/dl-trampoline.S (_dl_runtime_resolve): Avoid
	implicit atomic operation when storing function pointer.
	(_dl_runtime_profile): Likewise.

2007-08-17  Jakub Jelinek  <jakub@redhat.com>

	* nis/nis_table.c (nis_list): Don't fail if __follow_path returned
	NIS_NOTFOUND.

2007-08-21  Ulrich Drepper  <drepper@redhat.com>

	[BZ #4566]
	* string/strtok.c: Fix typo in comment.

	[BZ #4582]
	* debug/segfault.c: Fix typos in comments.

	[BZ #4588]
	* stdio-common/tempnam.c: Fix comment, it is not checked that
	TMPDIR points to a writable directory.

	[BZ #4726]
	* resolv/res_send.c (__libc_res_nsend): Initialize all of the
	memory allocated for the name server address.

	[BZ #4946]
	* nscd/connections.c (handle_request): Using sendfile always
	requires that mmap is used for the database.
	Patch by Petr Baudis <pasky@suse.cz>.

	[BZ #4905]
	* nscd/hstcache.c (cache_addhst): When reloading an entry which
	suddenly has two or more addresses, ignore it and remove the old
	entry.

	[BZ #4814]
	* resolv/res_hconf.c: Prepare for compiling outside libc.
	* nscd/res_hconf.c: New file.
	* nscd/Makefile (nscd-modules): Add res_hconf.  Add rules to build
	the new file.
	* nscd/gethstbynm2_r.c (NEED__RES_HCONF): Define.
	* nscd/gethstbyad_r.c (NEED__RES_HCONF): Likewise.

	* nscd/hstcache.c (cache_addhst): Minimal optimization.

	[BZ #4925]
	* debug/pcprofiledump.c: Turn on internationalization by calling
	setlocale.  Patch mostly by Benno Schulenberg.

	[BZ #4936]
	* iconv/gconv.c (__gconv): If flush was successful, clear rest of
	the state.
	* iconvdata/Makefile: Add rules to build and run bug-iconv5.
	* iconvdata/bug-iconv5.c: New file.
