@@ -22,7 +22,9 @@
 
 int (*__vdso_gettimeofday) (struct timeval *, void *) attribute_hidden;
 
-int (*__vdso_clock_gettime) (clockid_t, struct timespec *);
+int (*__vdso_clock_gettime) (clockid_t, struct timespec *)
+  __attribute__ ((nocommon));
+strong_alias (__vdso_clock_gettime, __GI___vdso_clock_gettime attribute_hidden)
 
 
 static inline void
@@ -40,7 +42,7 @@ _libc_vdso_platform_setup (void)
 
   p = _dl_vdso_vsym ("clock_gettime", &linux26);
   PTR_MANGLE (p);
-  __vdso_clock_gettime = p;
+  __GI___vdso_clock_gettime = p;
 }
 
 # define VDSO_SETUP _libc_vdso_platform_setup
